@@ -282,6 +282,9 @@ more detail than with the older
 .B -i
 option.
 .TP
+.I --Iraw <pathname>
+This option dumps the drive's identify data in raw binary to the specified file.
+.TP
 .I --Istdin
 This is a special variation on the
 .B -I
